--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/menu.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/sign.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/viewer.jsp=UTF-8
